# MailDock

./: .editorconfig  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: architecture.md
docs/learning-log/: week-01.md  week-02.md  week-03.md
docs/setup/: install-dev-tools.ps1  windows.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: lib.rs  mail_service.rs  mail_text.rs  main.rs  models.rs  sync_runtime.rs  time_utils.rs
src-tauri/src/commands/: mail.rs  mod.rs  provider.rs
src-tauri/src/db/: account_repo.rs  connection.rs  message_repo.rs  mod.rs  seed.rs  sync_state_repo.rs
src-tauri/src/imap/: mod.rs
src-tauri/src/providers/: mod.rs  qq.rs
src-tauri/src/security/: mod.rs
src/features/mail/: mailApi.ts  mockData.ts  types.ts
src/features/mail/components/: MailDetail.tsx  MailList.tsx  QqConnectionPanel.tsx  Sidebar.tsx  Toolbar.tsx
src/styles/: global.css
