[package]
name = "maildock"
version = "0.1.0"
description = "A learning-driven Windows desktop mail aggregator."
authors = ["MailDock contributors"]
edition = "2021"

[lib]
name = "maildock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
imap = "2.4"
native-tls = "0.2"
tauri = { version = "2", features = [] }
mailparse = "0.16.1"
base64 = "0.22.1"
encoding_rs = "0.8.35"
